--- a/index.html
+++ b/index.html
@@ -25,10 +25,22 @@
         <il>Milk churners</il>
         <il> CAN YOU FEEL MY <em>HEART</em></il>
       </ol>
-  <section/>
+  </section>
+  <details>
+    <summary>CSE100</summary>
+    <p>Most fun class I had with code</p>
+  </details>
   <hr>
-    <img src="
-    <p> <i>The following is my lovely</i> <b>linkedin</b>.<br> <a href=" https://www.linkedin.com/in/raiaan-mortuja-b793b9204/"> Visit me</a> </p>
+    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Flibrary.ucsd.edu%2Fnews-events%2Fgeisellibrary50thanniversary%2F&psig=AOvVaw0irbIAho32nK8k6vA6XyGM&ust=1665464102628000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCNDVlrPv1PoCFQAAAAAdAAAAABAE" alt="My school">
+    <p> <i>The following is my lovely</i> <b>linkedin</b>.<br> <a href=" https://www.linkedin.com/in/raiaan-mortuja-b793b9204/"> Visit me</a> </p>  
+    <p> A song I like</p>
+    <audio contorls>
+      <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-11.mp3" />
+    </audio>
+    <p> cool video I found</p>
+    <video width="300" height="220" controls>
+      <source src ="https://dl8.webmfiles.org/elephants-dream.webm" type="video.webm">
+    </video>
   <hr>
   <h3>My favourite recipe</h3>
     <p> Add <span class=ingredient">yogurt</span>,<span class=ingredient">Turmeric</span> and <span> class= "ingredient" garam Masala</span> and mix. </p>
@@ -36,6 +48,30 @@
       <li>Meat</il>
       <li>Love</il>
     </ul>
+    </main>
+  <h4>Tell me about you</h4>
+  <form action="/action_page.php" method="get">
+    <fieldset>
+      <label for="Name"> Name:</label>
+      <input type="text" id="Name" name="Name"><br>
+      <label for="review"> UCSD REVIEW:</label>
+      <textarea id="review" name="review" rows="2" cols="30"></textarea><br>
+      <label for="l"> You prefer Java,C++ or Python?:</label>
+      <datalist id="l">
+        <option value="C++">
+        <option value="Python">
+        <option value="Java">
+      </datalist>
+      <label for"g"> Now select it:</label>
+      <select name="g" id="g">
+        <option value="C++">C++</option>
+        <option value="Python">Python</option>
+        <option value="Java">Java</option>
+      </select>
+      <button type="button" onclick="alert('WALUWEGI')">Click now please</button>
+    </fieldset>
+  </form>
+  
   </body>
   <footer>
     <p> C++ is more fun </p>
