--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <header>
     <p>HTML is fun</p>
-  <header/>
+  </header>
   <body>
   <main>
     <p>I am a 4th year student at UCSD, I hope to learn a lot about the industry in this class.</p>
@@ -21,9 +21,9 @@
       <p> Coding a difficult problem </p>
     <h2>List of names</h2>
       <ol>
-        <il><strong>Powell's GOONs</strong></il>
-        <il>Milk churners</il>
-        <il> CAN YOU FEEL MY <em>HEART</em></il>
+        <li><strong>Powell's GOONs</strong></li>
+        <li>Milk churners</li>
+        <li> CAN YOU FEEL MY <em>HEART</em></li>
       </ol>
   </section>
   <details>
@@ -34,16 +34,16 @@
     <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Flibrary.ucsd.edu%2Fnews-events%2Fgeisellibrary50thanniversary%2F&psig=AOvVaw0irbIAho32nK8k6vA6XyGM&ust=1665464102628000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCNDVlrPv1PoCFQAAAAAdAAAAABAE" alt="My school">
     <p> <i>The following is my lovely</i> <b>linkedin</b>.<br> <a href=" https://www.linkedin.com/in/raiaan-mortuja-b793b9204/"> Visit me</a> </p>  
     <p> A song I like</p>
-    <audio contorls>
+    <audio>
       <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-11.mp3" />
     </audio>
     <p> cool video I found</p>
     <video width="300" height="220" controls>
-      <source src ="https://dl8.webmfiles.org/elephants-dream.webm" type="video.webm">
+      <source src ="https://dl8.webmfiles.org/elephants-dream.webm" type="video/webm">
     </video>
   <hr>
   <h3>My favourite recipe</h3>
-    <p> Add <span class=ingredient">yogurt</span>,<span class=ingredient">Turmeric</span> and <span> class= "ingredient" garam Masala</span> and mix. </p>
+    <p> Add <span class="ingredient">yogurt</span>,<span class="ingredient">Turmeric</span>,<span class="ingredient"> garam Masala</span> and mix. </p>
     <ul>
       <li>Meat</il>
       <li>Love</il>
@@ -75,5 +75,5 @@
   </body>
   <footer>
     <p> C++ is more fun </p>
-  <footer/>
+  </footer>
 </html>
