--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Raiaan Mortuja's Playground</title>
     <link rel="icon" type="image/png" href="https://img.icons8.com/dusk/344/globe--v1.png"/>
   </head>
+  <body>
   <header>
     <p>HTML is fun</p>
   </header>
-  <body>
   <main>
     <p>I am a 4th year student at UCSD, I hope to learn a lot about the industry in this class.</p>
     <nav>
@@ -45,8 +45,8 @@
   <h3>My favourite recipe</h3>
     <p> Add <span class="ingredient">yogurt</span>,<span class="ingredient">Turmeric</span>,<span class="ingredient"> garam Masala</span> and mix. </p>
     <ul>
-      <li>Meat</il>
-      <li>Love</il>
+      <li>Meat</li>
+      <li>Love</li>
     </ul>
     </main>
   <h4>Tell me about you</h4>
@@ -71,9 +71,8 @@
       <button type="button" onclick="alert('WALUWEGI')">Click now please</button>
     </fieldset>
   </form>
-  
-  </body>
-  <footer>
+   <footer>
     <p> C++ is more fun </p>
   </footer>
+  </body>
 </html>
