--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <option value="Python">
         <option value="Java">
       </datalist>
-      <label for"g"> Now select it:</label>
+      <label for="g"> Now select it:</label>
       <select name="g" id="g">
         <option value="C++">C++</option>
         <option value="Python">Python</option>
