--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
       <input type="text" id="Name" name="Name"><br>
       <label for="review"> UCSD REVIEW:</label>
       <textarea id="review" name="review" rows="2" cols="30"></textarea><br>
-      <label for="l"> You prefer Java,C++ or Python?:</label>
-      <datalist id="l">
+      <label for="Lang"> You prefer Java,C++ or Python?:</label>
+      <datalist id="Lang">
         <option value="C++">
         <option value="Python">
         <option value="Java">
