--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
       <label for="review"> UCSD REVIEW:</label>
       <textarea id="review" name="review" rows="2" cols="30"></textarea><br>
       <label for="Lang"> You prefer Java,C++ or Python?:</label>
-      <datalist id="Lang">
+      <input type"text" name="language" id="Lang" list="language_list">
+      <datalist id="language_list">
         <option value="C++">
         <option value="Python">
         <option value="Java">
