--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
       <input type="text" id="Name" name="Name"><br>
       <label for="review"> UCSD REVIEW:</label>
       <textarea id="review" name="review" rows="2" cols="30"></textarea><br>
-      <label for="Lang"> You prefer Java,C++ or Python?:</label>
-      <input type"text" name="language" id="Lang" list="language_list">
+      <label> You prefer Java,C++ or Python?:</label>
+      <input list="language_list">
       <datalist id="language_list">
-        <option value="C++">
-        <option value="Python">
-        <option value="Java">
+        <option value="C++"/>
+        <option value="Python"/>
+        <option value="Java"/>
       </datalist>
       <label for="g"> Now select it:</label>
       <select name="g" id="g">
