--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       <label> You prefer Java,C++ or Python?:</label>
       <input list="language_list">
       <datalist id="language_list">
-        <option value="C++"/>
-        <option value="Python"/>
-        <option value="Java"/>
+        <option value="C++">
+        <option value="Python">
+        <option value="Java">
       </datalist>
       <label for="g"> Now select it:</label>
       <select name="g" id="g">
